Nav bar overflow fix

--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
     align-items: center;
     gap: 14px;
     justify-self: end;
+    min-width:0px;
 }
 
 /* =========================
